/*
 * $Id: ChangeLog,v 1.3521 2004/10/22 15:44:55 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-10-22 12:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * hrbdll.wc
    - removed support fo removed source/codepage/uc437.c

2004-10-22 08:44 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * hrbdll.bc
    - removed support fo removed source/codepage/uc437.c
  + source/pp/calconst.c
    * Minor typo.

2004-10-22 10:35 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
    * remove vc60.idb and vc70.idb on make CLEAN

2004-10-22 10:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
  * source/rtl/gx.c
    * mild formatting.
  * source/rtl/readline.c
    * cast
  * makefile.nt
  * makefile.vc
  * makefile.wc
  * makefile.bc
  - source/codepage/uc437.c
    * code is in source/rtl/cdpapi.c

2004-10-22 08:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/maxrow.c
    * implement MaxRow(.t.) and MaxCol(.t.) to return max possible window
    * size for the current screen mode.
    * Usage at startup could be SetMode(MaxRow(.t.), MaxCol(.t.))
  * source/rtl/makefile
    - datesx.c

2004-10-22 08:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/dates.c
    * datestrget() - don't check byte 8 of passed date string for compatibility.
  * hrbdll.bc
  * hrbdll.vc
  * hrbdll.wc
  * makefile.nt
  * makefile.vc
  * makefile.wc
  * makefile.bc
    - source/rtl/datesx.c
  - source/rtl/datesx.c
  * source/rtl/dateshb.c
    * STOD down to it's simplest form - no need to check params.
    * HB_STOD now just a call to STOD.

2004-10-22 07:20 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * include\gtinfo.ch
    + GTI_VIEWMAXHEIGHT
    + GTI_VIEWMAXWIDTH

  * source/rtl/gtalleg/gtalleg.c
  * source/rtl/gtcgi/gtcgi.c
  * source/rtl/gtcrs/gtcrs.c