@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3521 2004/10/22 15:44:55 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.3522 2004/10/22 16:01:22 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-10-22 09:47 UTC-0800 Ron Pinkas <ron at xharbour.com>
+  * source/pp/ppcore.c
+    * Fixed bad typo in recent fix to detect redundant #else directives.
 
 2004-10-22 12:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * hrbdll.wc
